--- a/app/views/admins/_users.html.erb
+++ b/app/views/admins/_users.html.erb
@@ -13,7 +13,7 @@
 <table class="table table-bordered table-hover dataTable">
 	<thead>
 		<tr>
-		 	<th>No</th>
+		 	<th style="width: 10px">No</th>
 		 	<th>Name<%=get_user_order("user_profiles.first_name",@users.first.role.title)%></th>
 		 	<th>Email<%=get_user_order("email",@users.first.role.title)%></th>
 		 	<th>Actions</th>
