--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -6,8 +6,8 @@
               <%= avatar_display({class: "img-circle"}) %>
             </div>
             <div class="pull-left info">
-                <p><%=user_name %></p>
-                <a href="#"><i class="fa fa-circle text-success"></i>Online</a>
+              <p><%=user_name.titleize %></p>
+              <a href="#"><i class="fa fa-circle text-success"></i>Online</a>
             </div>
           </div>
           <br><br>
