--- a/app/views/admins/user_payment.html.erb
+++ b/app/views/admins/user_payment.html.erb
@@ -1,12 +1,16 @@
-<% if @payment.any? %>
+ <% if @payment.any? %>
+<% total=0 %>
+<div class="box box-primary">
+	
+<div id="printableArea">
 <table class="table table-bordered table-hover dataTable">
 	<thead>
 		<tr>
-			<th>No</th>
+			<th style="text-align: center">No</th>
+			<th>Case Title</th>
 		 	<th>Case Type</th>
-		 	<th>Case Title</th>
-		 	<th>Advocate Name</th>
 		 	<th>Client Name</th>
+		 	<th>Advocate Name</th>
 		 	<th>Amount</th>
 		 	<th>Purchased Date</th>
 
@@ -15,21 +19,52 @@
 	</thead>
 	<tbody>
 	<% @payment.each.with_index do |payment,index|%>
+	   <% total+=payment.case.case_type.amount %>
 			<tr>
 
-				<td><%= index+1 %></td>
-				<td><%=payment.case.case_type.case_type.titleize %></td>
-				<td><%=payment.case.case_title.titleize%></td>
-				<td><%=payment.user.user_profile.first_name.titleize+" "+payment.user.user_profile.last_name.titleize %></td>
-				<td><%=payment.case.user.user_profile.first_name.titleize + " "+payment.case.user.user_profile.last_name.titleize %></td>
-				<td><%=payment.case.case_type.amount %>$</td>
-				<td><%=payment.purchased_at %></td>
+				<td align="center"><%= index+1 %></td>
+				<td align="center"><%=payment.case.case_title.titleize%></td>
+				<td align="center"><%=payment.case.case_type.case_type.titleize %></td>
+				<td align="center"><%=payment.case.user.user_profile.first_name.titleize + " "+payment.case.user.user_profile.last_name.titleize %></td>
+				<td align="center"><%=payment.user.user_profile.first_name.titleize+" "+payment.user.user_profile.last_name.titleize %></td>
+				<td align="center"><%=payment.case.case_type.amount %>$</td>
+				<td align="center"><%=payment.purchased_at.strftime("%d-%m-%Y %H:%M:%S") %></td>
 				
 	    </tr>
-	   
 	<% end %>
-	</tbody>    
+	</tbody>
 </table>
+	
+	</div>  
+<input type="button" onclick="printDiv('printableArea')" value="Print" class="btn btn-primary"/>
+
+
 <% else %>
 <p> No Records Found</p>
 <% end %>
+</div>
+
+<script type="text/javascript">
+$('#type').change(function() {
+  $.ajax({ type: "GET",   
+           url: "<%= admins_user_payment_path  %>",
+           data: {case_type: $('#type option:selected').text()},
+  });
+});
+</script>
+
+
+
+
+<script type="text/javascript">
+function printDiv(divName) {
+     var printContents = document.getElementById(divName).innerHTML;
+     var originalContents = document.body.innerHTML;
+
+     document.body.innerHTML = printContents;
+
+     window.print();
+
+     document.body.innerHTML = originalContents;
+}
+</script>
