--- a/app/views/cases/_search_form.html.erb
+++ b/app/views/cases/_search_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag(cases_path, method: :get,remote: true, class: "navbar-form", role: 'search', id: "search-form") do %>
 <div class="form-group pull-right">
 	<%= select_tag :case_type_id,options_from_collection_for_select(CaseType.all, :id, :case_type,
-            default_case_type(@user_case.first)),{class: "form-control",id: "type",include_blank: "All"} %>
+            default_case_type_select(params[:case_type])),{class: "form-control",id: "type",include_blank: "All"} %>
 	<div class="input-group">
 		<%= text_field_tag 'search', nil, class: "form-control", placeholder: "search cases",title: "Enter to search",id: "search_word" %>
 		<div class='input-group-btn'>
