indetation issues and pagination error solved

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,7 @@
 <header class="main-header">
   <a href="#" class="logo">
-    <span class="logo-mini"><b>P</b>AT</span>
+    <span class="logo-mini"><%= image_tag('proAttorney', height: "50px", width: "50px", class: "pull-left") %></span>
+    <%= image_tag('proAttorney', height: "50px", width: "50px", class: "pull-left") %>
     <span class="logo-lg"><b>Pro</b>Attorney</span>
   </a>
   <nav class="navbar navbar-static-top" role="navigation">
