--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -7,6 +7,7 @@
       <div class="col-md-6">
         <div class="panel panel-default">
           <div class="panel-heading">
+            <i class="fa fa-fw fa-list"></i>
             <%= @user_case.case_title.titleize %>
           </div>
           <div class="panel-body">
