multi chosen tabs not added

--- a/app/views/cases/_form.html.erb
+++ b/app/views/cases/_form.html.erb
@@ -65,6 +65,8 @@
 
 
           <div class = "form-group">
+            <input type="hidden" id="foo" style="width: 100px;"/>
+
             <%= f.label :tag_list %><font color="red">*</font>
             <%= f.text_area :tag_list,class: "form-control",placeholder: "Enter Tags for better search" %>
           </div>
